--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -16,6 +16,7 @@ KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
 # Storage
 BUILD_ARTIFACTS_BASE_FOLDER=".amplication/build-artifacts"
 BUILD_ARTIFACTS_CODE_FOLDER="code"
+CLONES_FOLDER=".amplication/clones"
 
 # GitHub:
 GITHUB_APP_APP_ID=[github-app-app-id]
