fix(ci): fix prod deployment step to compare with master

--- a/.github/workflows/nx.template.yml
+++ b/.github/workflows/nx.template.yml
@@ -57,6 +57,7 @@ jobs:
           fetch-depth: 0
 
       - uses: nrwl/nx-set-shas@v3
+        if: inputs.nx-force-all == false
         with:
           main-branch-name: ${{ inputs.nx-base }}
 
