--- a/packages/data-service-generator/project.json
+++ b/packages/data-service-generator/project.json
@@ -80,6 +80,14 @@
         "envFile": "packages/data-service-generator/.env"
       }
     },
+    "generate-local-code-only": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "ts-node -P tsconfig.app.json -r tsconfig-paths/register ./src/main.ts ",
+        "cwd": "packages/data-service-generator",
+        "envFile": "packages/data-service-generator/.env"
+      }
+    },
     "generate-local-code": {
       "executor": "nx:run-commands",
       "options": {
