feat(nest-logging): expose a tests utils with mocked provider to simplify testing setup

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -46,6 +46,9 @@
       "@amplication/util/nestjs/logging": [
         "libs/util/nestjs/logging/src/index.ts"
       ],
+      "@amplication/util/nestjs/logging/test-utils": [
+        "libs/util/nestjs/logging/tests/utils/index.ts"
+      ],
       "@primer/react/deprecated": ["node_modules/@primer/react/lib/deprecated"]
     }
   },
