--- a/packages/amplication-prisma-db/.env
+++ b/packages/amplication-prisma-db/.env
@@ -1,6 +1,6 @@
 
 # Postgres
-POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/${SERVICE_DB_NAME}
+POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/amplication
 POSTGRESQL_USER=admin
 POSTGRESQL_PASSWORD=admin
 SERVICE_DB_NAME=amplication
