feat(kafka): allow dynamic configuration of kafka client TLS configuration

--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -4,6 +4,7 @@ PORT=5010
 KAFKA_BROKERS="localhost:9092"
 KAFKA_CLIENT_ID='build-manager'
 KAFKA_GROUP_ID='build-manager'
+KAFKA_CLIENT_CONFIG_SSL='false'
 
 # Kafka Topics
 CREATE_PR_REQUEST_TOPIC="git.internal.create-pr.request.2"
