--- a/packages/amplication-git-pull-request-service/.env
+++ b/packages/amplication-git-pull-request-service/.env
@@ -4,6 +4,7 @@ GIT_DEFAULT_ORIGIN_NAME="origin"
 KAFKA_CLIENT_ID="git-pull-request-service"
 KAFKA_GROUP_ID="git-pull-request-service-group"
 KAFKA_BROKERS="localhost:9092"
+KAFKA_CLIENT_CONFIG_SSL='false'
 
 # Kafka Topics
 CREATE_PULL_REQUEST_COMPLETED_TOPIC="git.internal.pull-request.completed.1"
