--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -32,9 +32,10 @@ CONTAINER_BUILDER_DEFAULT=docker
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CLIENT_ID='amplication-server'
 KAFKA_GROUP_ID="amplication-server-group"
-KAFKA_REPOSITORY_PUSH_QUEUE='git.external.push.event.0'
+KAFKA_CLIENT_CONFIG_SSL='false'
 
 # Kafka Topics
+KAFKA_REPOSITORY_PUSH_QUEUE='git.external.push.event.0'
 CREATE_PR_REQUEST_TOPIC="git.internal.create-pr.request.2"
 CREATE_PR_SUCCESS_TOPIC="git.internal.create-pr.success.1"
 CREATE_PR_FAILURE_TOPIC="git.internal.create-pr.failure.1"
