--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -9,6 +9,7 @@ JWT_EXPIRATION=2d
 KAFKA_BROKERS='localhost:9092'
 KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID='storage-server-group'
+KAFKA_CLIENT_CONFIG_SSL='false'
 
 # Kafka Topics
 KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
@@ -18,5 +19,4 @@ CHECK_USER_ACCESS_TOPIC="authorization.internal.can-access-build.request.0"
 BUILD_OUTPUT_FOLDER=output
 BUILD_ARTIFACTS_BASE_FOLDER=".amplication/build-artifacts"
 BUILD_ARTIFACTS_CODE_FOLDER="code"
-KAFKA_GROUP_ID="storage-server-group"
 
