--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -8,6 +8,7 @@ SERVICE_DB_NAME=amplication
 KAFKA_CLIENT_ID="git-push-webhook-service"
 KAFKA_GROUP_ID="amplication-git-push-webhook-service"
 KAFKA_BROKERS='localhost:9092'
+KAFKA_CLIENT_CONFIG_SSL='false'
 
 # Kafka Topics
 KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
