--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@primer/react": "^35.14.1",
     "@prisma/client": "^4.6.1",
     "@sendgrid/mail": "^7.7.0",
-    "@stigg/node-server-sdk": "^0.63.1",
-    "@stigg/react-sdk": "^1.4.0",
+    "@stigg/node-server-sdk": "v0.80.1",
+    "@stigg/react-sdk": "^1.21.0",
     "@swc/core": "^1.3.11",
     "adm-zip": "^0.5.9",
     "ajv": "^6.12.6",
