--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.13",
     "@mui/system": "^5.10.7",
+    "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.9",
